examples/error/oo7219_err2.jle
#oo7219_err2.jle
#feyi omotehinwa
#pythagoras.jelle

display "Enter opposite,adjacent: ",nl;
input opposite, adjacent;

# illegal ID
_hypothenus := (opposite^2 + adjacent^2)^0.5;

display "hyopthenus is ", _hypothenus;
